# CMakeLearn

./: CMakeLists.txt  README.md  add.cpp
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: head.h
src/: div.cpp  main.cpp  muli.cpp  sub.cpp
